--- a/style.css
+++ b/style.css
@@ -177,15 +177,15 @@ position:relative;background-color:darkgoldenrod;}
 
 
 @media all and (max-width:600px)
-{ body{margin-left:0%;margin-top:0%;margin-bottom:0%;}
-  .nim{width:100%;left:0%;;margin-left:0%;
-  border:solid black thick;max-height:200px;
-    min-height:200px;margin-bottom:0%;margin-top:0%;}
-  .nim >h1{text-align:center;font-size:400%;min-width:350px;}
+{body{margin-left:0%;margin-bottom:0%;margin-top:5%;}
+  .nim{width:67%;height:17%;left:16%;margin-left:0%;
+  border:solid black thick;min-width:200px;
+    min-height:140px;}
+  .nim >h1{text-align:center;font-size:300%;top:0%;}
 
  .beg{font-size:123%;min-height:50px;font-weight:500;
    font-family:"Times New Roman",Arial,monospace;border:groove black 2px;
- min-width:350px;margin-top:2%;margin-bottom:2%;}
+ min-width:350px;margin-top:4%;margin-bottom:1%;}
  #dib{padding-top:4%;}
  #cib{padding-top:4%;}
  #bib{padding-top:4%;}
@@ -240,7 +240,7 @@ border:solid rgb(117, 87, 101) thick;top:2%;}
   #nn{top:26%;left:37%;}
   #pi{top:7%;left:73%;}
   #pp{top:26%;left:74%;}
- #limbs{font-size:123%;left:34%}
+ #limbs{font-size:123%;left:31%}
 
 
 
